# programs-dotgit-sync-templates

./: .commitlintrc.ts  .config.yaml  .dotgit.yaml  .envrc  .gitignore  .gitlab-ci.yml  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.BEERWARE  README.md  devbox.json  devenv.nix  flake.nix  package.nix  releaserc.toml
.cspell/: words.txt
.gitlab/: commitlint.yaml  dotgit-sync.yaml  release.yaml  trigger-child-repo.yaml
.gitlab/commitlint/: gitlab-ci.yaml
.gitlab/dotgit-sync/: gitlab-ci.yaml
.gitlab/markdownlint/: gitlab-ci.yaml
.gitlab/semantic-release/: gitlab-ci.yaml
.release/: commit_parser.py
.release/templates/: .authors.macros.j2  .changelog.macros.j2  .release_notes.md.j2  AUTHORS.j2  CHANGELOG.md.j2
modules/: home-manager.nix
statics/base/: .envrc  releaserc.toml
statics/base-ci-gitlab/: .gitlab-ci.yml
statics/base-pre-commit/: .pre-commit-config.yaml
statics/commitlint-pre-commit/: .pre-commit-config.yaml
statics/common/: .gitlab-ci.yml  releaserc.toml
statics/markdown/: .markdownlint.jsonc  .markdownlintignore
statics/markdown-pre-commit/: .pre-commit-config.yaml
statics/opentofu/: .terraform-docs.yml  devbox.json
statics/opentofu-pre-commit/: .pre-commit-config.yaml
statics/python/: .editorconfig  cspell.json  devbox.json  ruff.toml
templates/base/: .envrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  releaserc.toml
templates/base-pre-commit/: .pre-commit-config.yaml
templates/common/: CODE_OF_CONDUCT.md
templates/gcloud/: devbox.json
templates/helm/: devbox.json
templates/python/: devbox.json  pyproject.toml
templates/python/.cspell/: words.txt
(+44 files in other folders)
