[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ slug }}"
description = "{{ description }}"
authors = [
{%- if "authors" in extra %}
{%- for author in extra.authors %}
  "{{ author.name }} <{{ author.mail }}>",
{%- endfor %}
{%- else %}
{%- for name, mail in maintainers.items() %}
  "{{ name }} <{{ mail }}>",
{%- endfor %}
{%- endif %}
]
maintainers = [
{%- for maintainer in maintainers.items() %}
  "{{ name }} <{{ mail }}>",
{%- endfor %}
]
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY
# Version computed from git tag
version = "0"
readme = "README.md"
keywords = []
classifiers = []
packages = []
include = []
homepage = ""
repository = ""
documentation = ""
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY

[tool.poetry.urls]
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_URLS
#
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_URLS

[tool.poetry.scripts]
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_SCRIPTS
#
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_SCRIPTS

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_DEP
#
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_DEP

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.8"
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_BUILD
#
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_BUILD

[tool.poetry.group.test.dependencies]
coverage = ">=7.5"
coverage-threshold = ">=0.4"
pytest = ">=8.2"
ruff = ">=0.4"
# BEGIN DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_TEST
#
# END DOTGIT-SYNC BLOCK EXCLUDED CUSTOM_POETRY_TEST
